# Foccuss.Desktop.Linux

./: .gitignore  CMakeLists.txt  README.md  build.sh  fix_and_build.sh  install_deps.sh  kill_foccuss.sh  run.sh  run_foccuss_service.sh
include/: Common.h  ForwardDeclarations.h  X11Includes.h
resources/: foccuss.desktop  foccuss.service
resources/styles/: main_style.qss
src/: main.cpp
src/core/: appdetector.cpp  appdetector.h  appmonitor.cpp  appmonitor.h
src/data/: appmodel.cpp  appmodel.h  blockTimeSettingsModel.h  database.cpp  database.h
src/service/: apiservice.cpp  apiservice.h  linuxservice.cpp  linuxservice.h
src/ui/: applistmodel.cpp  applistmodel.h  blockoverlay.cpp  blockoverlay.h  mainwindow.cpp  mainwindow.h
